[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [workspace]
# members = [".", "entity", "migration"]

[dependencies]
constant_time_eq = "0.2.4"
lazy_static = "1.4.0"
bson = "2.4.0"
futures = "^0.3"
async-stream = { version = "^0.3" }
async-trait = { version = "0.1" }
chrono = "0.4"
anyhow = "1.0.65"

rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }


serde = { version = "1.0", features = ["derive"] }
serde_json = "^1"

mongodb = { version = "2.3.0", features = ["tokio-runtime"] }


[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]
